argo-wf/overlays/kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      serviceAccountName: argo-server
      containers:
        - name: argo-server
          args:
            - server
            - --auth-mode=sso
            - --secure=false
            - --verbose
          image: argoproj/argocli:v3.0.1
