argo-wf/overlays/kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  selector:
    app: argo-server
  ports:
    - name: web
      port: 80
      targetPort: 2746
